--- a/templates/clientes/index.html.twig
+++ b/templates/clientes/index.html.twig
@@ -144,8 +144,12 @@
                     <a href="{{ path('clientes_edit', {'id': cliente.id}) }}">
                         <i class="fa fa-fw fa-pencil"></i>
                     </a>
-                       <a href="{{ path('clientes_show', {'id': cliente.id}) }}">
+                    <a href="{{ path('clientes_show', {'id': cliente.id}) }}">
                         <i class="fa fa-fw fa-eye"></i>
+                    </a>
+
+                    <a title="recuperar password" href="{{ path('email_reset_password', {'email': cliente.email}) }}" class="email_reset_password">
+                        <i class="fa fa-fw fa-envelope-o"></i>
                     </a>
                 </td>
                 
