--- a/src/Resources/FOSUserBundle/views/Registration/register_content.html.twig
+++ b/src/Resources/FOSUserBundle/views/Registration/register_content.html.twig
@@ -1,9 +1,24 @@
 {% trans_default_domain 'FOSUserBundle' %}
+<div class="row">
+    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+        <div class="card">
+
+        <div class="header">
+            <h2>
+                <strong>Formulario Usuarios</strong>
+            </h2>
+            
+        </div>
+    <div class="card-body table-responsive">
 
 {{ form_start(form, {'method': 'post', 'action': path('admin_save_user'), 'attr': {'class': 'fos_user_registration_register'}}) }}
     {{ form_widget(form) }}
     <div>
     <br/>
-        <input type="submit" value="{{ 'registration.submit'|trans }}" />
+        <input class="btn btn-success" type="submit" value="{{ 'registration.submit'|trans }}" />
     </div>
 {{ form_end(form) }}
+</div>
+</div>
+</div>
+</div>
