--- a/templates/clientes/index.html.twig
+++ b/templates/clientes/index.html.twig
@@ -47,7 +47,7 @@
                               <select name="tipo_cliente" id="tipo_cliente">
                                     <option value="">Tipo Cliente</option>
                                     <option value="1" {% if tipo_cliente==1 %} selected='true' {% endif %}>Cliente Wallet</option>
-                                    <option value="2" {% if tipo_cliente==2 %} selected='true' {% endif %}>Cliente Flotilla</option>
+                                    <option value="2" {% if tipo_cliente==2 %} selected='true' {% endif %}>Admin Flotilla</option>
                               </select>
                             </div>
                         </div>
