--- a/templates/usuarios/index.html.twig
+++ b/templates/usuarios/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block content_title %}Usuarios{% endblock %}
+{% block content_title %}Usuarios Permergas{% endblock %}
 {% block busqueda_general %}
 
     <div class="search-box">
@@ -76,7 +76,7 @@
             </tr>
         {% else %}
             <tr>
-                <td colspan="19">no records found</td>
+                <td colspan="19">no se encuentran resultados</td>
             </tr>
         {% endfor %}
         </tbody>
