cambio de copies en usuarios y login

--- a/templates/user/recuperar_cuenta.html.twig
+++ b/templates/user/recuperar_cuenta.html.twig
@@ -40,12 +40,12 @@
     </div>
     <div class="container-login100-form-btn">
         <button class="login100-form-btn" type="submit" value="submit">
-            Recupear mi cuenta
+            Recuperar mi cuenta
         </button>
     </div>
     <div class="text-center p-t-50">
         <a class="txt1" href="{{path('login')}}">
-            Login?
+            Iniciar sesión
         </a>
     </div>
   
