--- a/src/Resources/FOSUserBundle/views/Security/login_content.html.twig
+++ b/src/Resources/FOSUserBundle/views/Security/login_content.html.twig
@@ -8,9 +8,7 @@
     <span class="login100-form-logo">
         <img alt="" src="{{asset('adminlte/assets/images/loading.png')}}">
     </span>
-    <span class="login100-form-title p-b-34 p-t-27">
-        Ingreso Permergas
-    </span>
+
     {% for message in app.flashes('success') %}
         <div class="alert alert-success alert-dismissible" role="alert">
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -29,7 +27,7 @@
 {% endfor %} 
     <br/>
     <div class="wrap-input100 validate-input" data-validate="Enter username">
-        <input class="input100" type="text" id="username" name="_username" value="{{ last_username }}" placeholder="Nombre de usuario">
+        <input class="input100" type="text" id="username" name="_username" value="{{ last_username }}" placeholder="email">
         <i class="material-icons focus-input1001">person</i>
     </div>
     <div class="wrap-input100 validate-input" data-validate="Enter password">
@@ -49,7 +47,7 @@
     </div>
     <div class="container-login100-form-btn">
         <button class="login100-form-btn">
-            Enviar  
+            iniciar sesión
         </button>
     </div>
     <div class="text-center p-t-50">
