plantillas promociones publicidad y precio de gasolina

--- a/templates/home/menu_admin.html.twig
+++ b/templates/home/menu_admin.html.twig
@@ -25,4 +25,22 @@
         <span>Gasolineras</span>
     </a>
 </li>
+<li>
+    <a href="{{asset('/admin/promociones')}}">
+        <i class="far fa-calendar"></i>
+        <span>Promociones</span>
+    </a>
+</li>
+<li>
+    <a href="{{asset('/admin/precio')}}">
+        <i class="far fa-calendar"></i>
+        <span>Precio Gasolina </span>
+    </a>
+</li>
+<li>
+    <a href="{{asset('/admin/publicidad')}}">
+        <i class="far fa-calendar"></i>
+        <span>Publicidad</span>
+    </a>
+</li>
 
