--- a/templates/home/menu_flotilla.html.twig
+++ b/templates/home/menu_flotilla.html.twig
@@ -4,3 +4,21 @@
             <span>Clientes</span>
         </a>
     </li>
+  <li>
+      <a href="{{asset('/admin/promociones')}}">
+          <i class="far fa-calendar"></i>
+          <span>Promociones</span>
+      </a>
+  </li>
+  <li>
+      <a href="{{asset('/admin/precio_gasolina')}}">
+          <i class="far fa-calendar"></i>
+          <span>Precio Gasolina </span>
+      </a>
+  </li>
+  <li>
+      <a href="{{asset('/admin/publicidad')}}">
+          <i class="far fa-calendar"></i>
+          <span>Publicidad</span>
+      </a>
+  </li>
