cambio de rutas

--- a/templates/home/menu_admin.html.twig
+++ b/templates/home/menu_admin.html.twig
@@ -32,7 +32,7 @@
     </a>
 </li>
 <li>
-    <a href="{{asset('/admin/precio')}}">
+    <a href="{{asset('/admin/precio/gasolina    ')}}">
         <i class="far fa-calendar"></i>
         <span>Precio Gasolina </span>
     </a>
