--- a/templates/home/menu_flotilla.html.twig
+++ b/templates/home/menu_flotilla.html.twig
@@ -11,7 +11,7 @@
       </a>
   </li>
   <li>
-      <a href="{{asset('/admin/precio_gasolina')}}">
+      <a href="{{asset('/admin/precio/gasolina')}}">
           <i class="far fa-calendar"></i>
           <span>Precio Gasolina </span>
       </a>
