--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -68,7 +68,7 @@
                 <a href="javascript:void(0);" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse"
                     aria-expanded="false"></a>
                 <a href="javascript:void(0);" class="bars"></a>
-                <a class="navbar-brand" href="../../index.html">
+                <a class="navbar-brand" href="{{asset('/admin/home')}}">
                     <img src="{{asset('adminlte/assets/images/logo.png')}}" alt="" />
                     <span class="logo-name"><img src="{{asset('adminlte/assets/images/titulo.png')}}"></span>
                 </a>
@@ -114,7 +114,7 @@
                             <li class="body">
                                 <ul class="user_dw_menu">
                                     <li>
-                                        <a href="javascript:void(0);">
+                                        <a href="{{path('perfil')}}">
                                             <i class="material-icons">person</i>Mi Cuenta
                                         </a>
                                     </li>
