--- a/templates/clientes/edit.html.twig
+++ b/templates/clientes/edit.html.twig
@@ -17,11 +17,21 @@
     
     $('document').ready(function(){
         
-        $("#clientes_documento").attr("disabled",true);
-        $("#clientes_nombres").attr("disabled",true);
-        $("#clientes_apellidos").attr("disabled",true);
-        $("#clientes_tipo").attr("disabled",true);
+        $("#clientes_documento").attr("readonly",true);
+        $("#clientes_nombres").attr("readonly",true);
+        $("#clientes_apellidos").attr("readonly",true);
+        $("#clientes_tipo").attr("readonly",true);
+
     })
 </script>
+
+
+{% if is_granted('ROLE_CLIENTE') %}
+<script type="text/javascript">
+ $('document').ready(function(){
+ 	$("#clientes_tipo").parent().parent().parent().hide();
+ })
+</script>
+{% endif%}
        
 {% endblock %}
