--- a/templates/clientes/_form.html.twig
+++ b/templates/clientes/_form.html.twig
@@ -16,13 +16,19 @@
     <br/>
     <button class="btn btn-success">{{ button_label|default('Guardar') }}</button>
 
-    <a class="btn btn-default" href="{{ path('clientes_index') }}">Volver a la Lista</a>
-
+   
 {{ form_end(form) }}
 {% if eliminar %}
+
+{% if is_granted('ROLE_CLIENTE') %}
+{% else %}
+ <a class="btn btn-default" href="{{ path('clientes_index') }}">Volver a la Lista</a>
+
 <br/><br/>
-	{{ include('clientes/_delete_form.html.twig') }}
+    {{ include('clientes/_delete_form.html.twig') }}
 {% endif %}
+{% endif %}
+
 </div>
 </div>
 </div>
