--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -48,6 +48,10 @@
         .selection{
             display: none;
         }
+
+        .plain-card{
+            min-height:128px;
+        }
        
         
     </style>
