--- a/templates/home/index_gasolinera.html.twig
+++ b/templates/home/index_gasolinera.html.twig
@@ -6,10 +6,10 @@
 	<div class="col-lg-4">
         <div class="plain-card">
             <div class="card-inner">
-                <h6 class="tx-primary m-b-10">Total Clientes</h6>
+                <h6 class="tx-primary m-b-10">Puntos Venta</h6>
                 <div class="row">
                     <div class="col col-block">
-                        <h2>0</h2>
+                        <h2>5</h2>
                     </div>
                 </div>
             </div>
@@ -18,10 +18,10 @@
     <div class="col-lg-4">
         <div class="plain-card">
             <div class="card-inner">
-                <h6 class="tx-primary m-b-10">Saldo Wallet Admin</h6>
+                <h6 class="tx-primary m-b-10">Vendedores</h6>
                 <div class="row">
                     <div class="col col-block">
-                        <h2>1,898</h2>
+                        <h2>5</h2>
                     </div>
                 </div>
             </div>
@@ -30,10 +30,19 @@
     <div class="col-lg-4">
         <div class="plain-card">
             <div class="card-inner">
-                <h6 class="tx-primary m-b-10">Saldo Wallet Clientes</h6>
-                <div class="row">
+                <h6 class="tx-primary m-b-10">Ventas</h6>
+                    <div class="row">
                     <div class="col col-block">
-                        <h2>0</h2>
+                        <label class="font-14">Hoy</label>
+                        <p>1,000</p>
+                    </div>
+                    <div class="col col-block">
+                        <label class="font-14">Semana</label>
+                        <p>58,000</p>
+                    </div>
+                    <div class="col col-block">
+                        <label class="font-14">Mes</label>
+                        <p>600,000</p>
                     </div>
                 </div>
             </div>
