cambios loguin and reset  password

--- a/templates/user/reset_cuenta.html.twig
+++ b/templates/user/reset_cuenta.html.twig
@@ -8,9 +8,7 @@
     <span class="login100-form-logo">
         <img alt="" src="{{asset('adminlte/assets/images/loading.png')}}">
     </span>
-    <span class="login100-form-title p-b-34 p-t-27">
-        Recuperar Cuenta
-    </span>
+    <br/>
     {% for message in app.flashes('bad') %}
 <div class="alert bg-pink alert-dismissible" role="alert">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -40,7 +38,7 @@
     </div>
     <div class="text-center p-t-50">
         <a class="txt1" href="{{path('login')}}">
-            Login?
+            Iniciar sesión
         </a>
     </div>
   
