--- a/public/adminlte/assets/css/pages/extra_pages.css
+++ b/public/adminlte/assets/css/pages/extra_pages.css
@@ -168,7 +168,7 @@ iframe {
   width: 120px;
   height: 120px;
   border-radius: 50%;
-  background-color: #5e6d7e;
+  background-color: white;
   margin: 0 auto;
   box-shadow: 0px 5px 25px 0px rgba(0, 0, 0, 0.2); }
   .login100-form-logo img {
@@ -378,7 +378,8 @@ input[type=email].input100, input[type=email]:not(.browser-default).input100 {
   padding: 10px 0; }
 
 .page-background {
-  background-image: url("../../images/bg-01.jpg"); }
+  background-color: white; 
+}
 
 @media (max-width: 992px) {
   .alert-validate::before {
