--- a/templates/home/index_gasolinera.html.twig
+++ b/templates/home/index_gasolinera.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
-{% block content_title %}Dashboard Flotilla{% endblock %}
+{% block content_title %}Dashboard Gasolinera{% endblock %}
 
 {% block body %}
 <div class="row">
@@ -9,7 +9,7 @@
                 <h6 class="tx-primary m-b-10">Puntos Venta</h6>
                 <div class="row">
                     <div class="col col-block">
-                        <h2>5</h2>
+                        <h2>0</h2>
                     </div>
                 </div>
             </div>
@@ -21,7 +21,7 @@
                 <h6 class="tx-primary m-b-10">Vendedores</h6>
                 <div class="row">
                     <div class="col col-block">
-                        <h2>5</h2>
+                        <h2>0</h2>
                     </div>
                 </div>
             </div>
@@ -34,15 +34,15 @@
                     <div class="row">
                     <div class="col col-block">
                         <label class="font-14">Hoy</label>
-                        <p>1,000</p>
+                        <p>0</p>
                     </div>
                     <div class="col col-block">
                         <label class="font-14">Semana</label>
-                        <p>58,000</p>
+                        <p>0</p>
                     </div>
                     <div class="col col-block">
                         <label class="font-14">Mes</label>
-                        <p>600,000</p>
+                        <p>0</p>
                     </div>
                 </div>
             </div>
