--- a/templates/home/menu_gasolinera.html.twig
+++ b/templates/home/menu_gasolinera.html.twig
@@ -5,8 +5,15 @@
       </a>
   </li>
   <li>
-      <a href="#">
+      <a href="/admin/transacciones">
           <i class="far fa-calendar"></i>
           <span>Transacciones </span>
+      </a>
+  </li>
+
+   <li>
+      <a href="/admin/puntos/venta/gasolinera/{{gasolinera.id}}">
+          <i class="far fa-calendar"></i>
+          <span>Puntos de Venta </span>
       </a>
   </li>
