--- a/templates/puntos_venta/index.html.twig
+++ b/templates/puntos_venta/index.html.twig
@@ -7,18 +7,7 @@
 <div class="row">
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
-        <div class="form-action form-action-search  action-search">
-            <form method="get" action="/admin/puntos/venta">
-                <input type="hidden" name="action" value="search">
-                <input type="hidden" name="entity" value="Flotillas">
-                <input type="hidden" name="submenuIndex" value="">
-                <div class="form-group">
-                    <div class="form-widget">
-                        <input class="form-control" type="search" name="query" value="" placeholder="Buscar">
-                    </div>
-                </div>
-            </form>
-        </div>
+        
         <div class="button-action">
             <a class="btn btn-default" href="{{ path('puntos_venta_new') }}">Nuevo Punto Venta</a> 
         </div>
@@ -34,7 +23,7 @@
 
     <div class="header">
         <h2>
-            <strong>Lista Vendedores</strong>
+            <strong>Lista Puntos De Venta</strong>
         </h2>
     </div>
     <div class="card-body table-responsive">
