--- a/templates/home/menu_flotilla.html.twig
+++ b/templates/home/menu_flotilla.html.twig
@@ -11,3 +11,17 @@
       </a>
   </li>
   
+  <li>
+      <a href="{{path('flotillas_usuarios', {'id': flotilla.id})}}">
+          <i class="far fa-calendar"></i>
+          <span>Usuarios</span>
+      </a>
+  </li>
+
+  <li>
+       <a  href="{{ path('clientes_index') }}">
+          <i class="far fa-calendar"></i>
+          <span>Clientes</span>
+      </a>
+  </li>
+                            
