--- a/templates/clientes/show.html.twig
+++ b/templates/clientes/show.html.twig
@@ -137,7 +137,7 @@
                     <label for="email_address">Saldo Wallet Flotilla</label>
                     <div class="form-group">
                         <div class="form-line">
-                            <input type="text" id="saldo_flotilla" class="form-control" readonly="true" placeholder="" value="$ {{wallet_flotilla.saldo|number_format(2)}} MX">
+                            <input type="text" id="saldo_flotilla" class="form-control" data-saldo={{wallet_flotilla.saldo}} readonly="true" placeholder="" value="$ {{wallet_flotilla.saldo|number_format(2)}} MX">
                         </div>
                     </div>
                     <label for="password">Valor a transferir</label>
@@ -180,7 +180,7 @@
                     <label for="email_address">Saldo Wallet Cliente</label>
                     <div class="form-group">
                         <div class="form-line">
-                            <input type="text" readonly="true" id="frm_quitar_saldo_wallet_cliente" class="form-control" placeholder="" value="{{wallet_cliente.saldo|number_format(2)}} MX" >
+                            <input type="text" readonly="true" id="frm_quitar_saldo_wallet_cliente" class="form-control" placeholder="" value="{{wallet_cliente.saldo|number_format(2)}} MX" data-saldo="{{wallet_cliente.saldo}}" >
                         </div>
                     </div>
                     <label for="password">Valor a descontar</label>
@@ -215,7 +215,7 @@
             'saldo_wallet': {
                 required: true,
                 min:1,
-                max:1000000
+                max:$("#saldo_flotilla").data('saldo')
             },
         },
         messages:{
@@ -242,14 +242,14 @@
             'valor': {
                 required: true,
                 min:1,
-                max:$('#frm_quitar_saldo_wallet_cliente').val()
+                max:$('#frm_quitar_saldo_wallet_cliente').data('saldo')
             },
         },
         messages:{
             'valor':{
                 required:'Ingresa el saldo a transferir',
                 min:'Ingresa un valor valido',
-                max:'El valor a transferir no debe superar el saldo actual'
+                max:'El valor a transferir no debe superar el saldo actual de la flotilla'
             }
         },
         highlight: function (input) {
