--- a/templates/flotillas/clientes.html.twig
+++ b/templates/flotillas/clientes.html.twig
@@ -20,7 +20,16 @@
     <div class="row">
         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="button-action">
-                <a class="btn btn-default" href="{{ path('flotillas_new') }}">Nuevo Cliente Flotilla</a>
+                 {% if is_granted('ROLE_ADMIN_FLOTILLA') %}
+
+                <a class="btn btn-default" href="{{ path('clientes_new') }}">Nuevo Cliente Flotilla</a>
+
+                {% else %}
+
+                  <a class="btn btn-default" href="{{ path('flotilla_clientes_new') }}">Nuevo Cliente Flotilla</a>
+
+                {% endif %}
+                
             </div>
         </div>
     </div>
