--- a/templates/clientes/show.html.twig
+++ b/templates/clientes/show.html.twig
@@ -49,7 +49,13 @@
             </tr>
             <tr>
                 <th>Avatar</th>
-                <td>{{ cliente.avatar }}</td>
+                <td>
+                    {% if(cliente.avatar) %}
+                    <img src="{{asset(cliente.avatar)}}" width="64" height="64" alt="User">
+                    {% else%}
+
+                    {% endif%}
+                </td>
             </tr>
             <tr>
                 <th>Placa</th>
