--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,6 +18,7 @@
 
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css" rel="stylesheet" />
 
+
  
     </style>
 
@@ -311,6 +312,8 @@
 
 
         <script src="{{asset('adminlte/assets/js/admin.js')}}"></script>
+        <script src="{{asset('adminlte/assets/js/chart.min.js')}}"></script>
+
         <script src="{{asset('adminlte/assets/js/bundles/multiselect/js/jquery.multi-select.js')}}"></script>
         <script src="{{asset('adminlte/assets/js/bundles/bootstrap-colorpicker/dist/js/bootstrap-colorpicker.js')}}"></script>
 
@@ -330,6 +333,8 @@
                 })
             })
         </script>
+
+
         {% block body_javascript %}
        
         {% endblock body_javascript %}
