--- a/templates/flotillas/clientes.html.twig
+++ b/templates/flotillas/clientes.html.twig
@@ -26,7 +26,7 @@
 
                 {% else %}
 
-                  <a class="btn btn-default" href="{{ path('flotilla_clientes_new') }}">Nuevo Cliente Flotilla</a>
+                  <a class="btn btn-default" href="{{ path('flotillas_clientes_new',{id:flotilla.id}) }}">Nuevo Cliente Flotilla</a>
 
                 {% endif %}
                 
