--- a/templates/flotillas/index.html.twig
+++ b/templates/flotillas/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block content_title %}Listado Flotillas{% endblock %}
+{% block content_title %}Flotillas{% endblock %}
 
 {% block busqueda_general %}
 
