--- a/templates/home/index_flotilla.html.twig
+++ b/templates/home/index_flotilla.html.twig
@@ -1,6 +1,9 @@
 {% extends 'base.html.twig' %}
 {% block content_title %}Dashboard Flotilla{% endblock %}
 
+{% block busqueda_general %}
+{% endblock %}
+
 {% block body %}
 <div class="row">
 	<div class="col-lg-4">
