--- a/templates/clientes/show.html.twig
+++ b/templates/clientes/show.html.twig
@@ -209,9 +209,111 @@
 </div>
 </div>
 {% endif %}
+
+
+{% if is_granted('ROLE_ADMIN') %}
+
+<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+<div class="modal fade" id="modal_agregar_saldo" tabindex="-1" role="dialog" aria-labelledby="modal_agregar_saldo" aria-hidden="true" style="display: none;">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Agregar Saldo Cliente ( {{cliente.nombres}} )</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form id="form_agregar_saldo" action="{{path('cliente_actualizar_saldo',{id:cliente.id})}}" method="POST">
+                    <input type="hidden" name="wallet_cliente" id="wallet_cliente" value="{{wallet_cliente.id}}" >
+                    <input type="hidden" name="accion" value="agregar">
+                    <label for="email_address">Nota Transferencia</label>
+                    <div class="form-group">
+                        <div class="form-line">
+                            <input type="text" id="notas" name="notas" class="form-control"  placeholder="Notas" value="">
+                        </div>
+                    </div>      
+                    <label for="email_address">Saldo Wallet Cliente</label>
+                    <div class="form-group">
+                        <div class="form-line">
+                            <input type="text" id="saldo_flotilla" class="form-control" data-saldo={{wallet_cliente.saldo}} readonly="true" placeholder="" value="$ {{wallet_cliente.saldo|number_format(2)}} MX">
+                        </div>
+                    </div>
+                    <label for="password">Valor a transferir</label>
+                    <div class="form-group">
+                        <div class="form-line">
+                            <input type="number" min="0" max="1000000" id="saldo_wallet" name="valor" class="form-control" placeholder="$ valor en pesos mexicanos">
+                        </div>
+                    </div>
+
+                    <br>
+                    
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-success waves-effect" id="btn_save_transferencia">Guardar</button>
+                <button type="button" class="btn btn-danger waves-effect" data-dismiss="modal">Cancelar</button>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+
+
+<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+<div class="modal fade" id="modal_quitar_saldo" tabindex="-1" role="dialog" aria-labelledby="modal_quitar_saldo" aria-hidden="true" style="display: none;">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Quitar Saldo Cliente ( {{cliente.nombres}} )</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">×</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form id="form_quitar_saldo" action="{{path('cliente_actualizar_saldo',{id:cliente.id})}}" method="POST">
+                    <input type="hidden" name="wallet_cliente" id="wallet_cliente" value="{{wallet_cliente.id}}" >
+                    <input type="hidden" name="accion" value="quitar">
+                    <label for="email_address">Nota Transferencia</label>
+                    <div class="form-group">
+                        <div class="form-line">
+                            <input type="text" id="notas" name="notas" class="form-control"  placeholder="Notas" value="">
+                        </div>
+                    </div>  
+                    <label for="email_address">Saldo Wallet Cliente</label>
+                    <div class="form-group">
+                        <div class="form-line">
+                            <input type="text" readonly="true" id="frm_quitar_saldo_wallet_cliente" class="form-control" placeholder="" value="{{wallet_cliente.saldo|number_format(2)}} MX" data-saldo="{{wallet_cliente.saldo}}" >
+                        </div>
+                    </div>
+                    <label for="password">Valor a descontar</label>
+                    <div class="form-group">
+                        <div class="form-line">
+                            <input type="number" name="valor" id="frm_quitar_saldo_cliente" class="form-control" placeholder="$ valor en pesos mexicanos">
+                        </div>
+                    </div>
+
+                    <br>
+                    
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-success waves-effect" id="btn_save_quitar_saldo">Guardar</button>
+                <button type="button" class="btn btn-danger waves-effect" data-dismiss="modal">Cancelar</button>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+
+{% endif %}
+
 {% endblock %}
 
 {% block body_javascript %}
+
+{% if is_granted('ROLE_ADMIN_FLOTILLA') %}
+
 <script type="text/javascript">
     $(document).ready(function(){
        
@@ -288,5 +390,99 @@
     })
 
 </script>
+
+{% endif %}
+
+{% if is_granted('ROLE_ADMIN') %}
+<script type="text/javascript">
+    $(document).ready(function(){
+       
+
+        $('#form_agregar_saldo').validate({
+        rules: {
+            'notas':{
+                required:true
+            },
+            'saldo_wallet': {
+                required: true,
+                min:1,
+                max:$("#saldo_flotilla").data('saldo')
+            },
+        },
+        messages:{
+            'notas':{
+                required:'El campo nota es obligatorio'
+            },
+            'saldo_wallet':{
+                required:'Ingresa el saldo a transferir',
+                min:'Ingresa un valor valido',
+                max:'El valor a transferir es muy alto no debe superar el 1,000,000'
+            }
+        },
+        highlight: function (input) {
+            $(input).parents('.form-line').addClass('error');
+        },
+        unhighlight: function (input) {
+            $(input).parents('.form-line').removeClass('error');
+        },
+        errorPlacement: function (error, element) {
+            $(element).parents('.form-group').append(error);
+        }
+    });
+
+
+    $('#form_quitar_saldo').validate({
+        rules: {
+            'notas':{
+                required:true
+            },
+            'valor': {
+                required: true,
+                min:1,
+                max:$('#frm_quitar_saldo_wallet_cliente').data('saldo')
+            },
+        },
+        messages:{
+            'notas':{
+                required:'El campo nota es obligatorio'
+            },
+            'valor':{
+                required:'Ingresa el saldo a transferir',
+                min:'Ingresa un valor valido',
+                max:'El valor a transferir es muy alto no debe superar el 1,000,000'
+            }
+        },
+        highlight: function (input) {
+            $(input).parents('.form-line').addClass('error');
+        },
+        unhighlight: function (input) {
+            $(input).parents('.form-line').removeClass('error');
+        },
+        errorPlacement: function (error, element) {
+            $(element).parents('.form-group').append(error);
+        }
+    });
+
+    $("#btn_save_transferencia").click(function(e){
+        e.preventDefault();
+        var valid=$('#form_agregar_saldo').valid();
+        if(valid){
+            $('#form_agregar_saldo').submit();
+        }
+    })
+
+    $("#btn_save_quitar_saldo").click(function(e){
+        e.preventDefault();
+        var valid=$('#form_quitar_saldo').valid();
+        if(valid){
+            $('#form_quitar_saldo').submit();
+        }
+    })
+
+    })
+
+</script>
+{% endif %}
+
 {% endblock body_javascript %}
 
